# wpilog-parser-rs

./: .gitignore  API.md  Cargo.toml  LICENSE  README.md
examples/: advanced_usage.rs  low_level_parsing.rs  simple_conversion.rs
parser/: main.py  pyproject.toml
parser/format/: formatter.py  models.py
parser/format/formats/: parquet.py
parser/wpilib/: datalog.py
src/: datalog.rs  error.rs  formatter.rs  lib.rs  main.rs  models.rs  progress.rs  reader.rs  writer.rs
src/formats/: parquet.rs
tests/: datalog_tests.rs  formatter_tests.rs  parquet_schema_tests.rs  progress_tests.rs
tests/common/: mod.rs
