[package]
name = "wpilog-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
memmap2 = "0.9"
rmpv = "1.3"
arrow = { version = "53.3", features = ["prettyprint"] }
parquet = { version = "53.3", features = ["arrow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
byteorder = "1.5"
thiserror = "2.0"

[dev-dependencies]
hex = "0.4"
tempfile = "3.8"
